--- a/mods/tweaks/interface/craftpresence.pw.toml
+++ b/mods/tweaks/interface/craftpresence.pw.toml
@@ -1,13 +1,13 @@
 name = "CraftPresence"
-filename = "CraftPresence-2.3.9+1.20.1.jar"
+filename = "CraftPresence-2.4.0+1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/xfaJfAQA/CraftPresence-2.3.9%2B1.20.1.jar"
+url = "https://cdn.modrinth.com/data/DFqQfIBR/versions/P4RgtiBc/CraftPresence-2.4.0%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "dafc4de6c45773cffc7ef3699b2333a2f27d44a4"
+hash = "dce6fa746dbe7510dbb72600f5fe6a7d65a299f2"
 
 [update]
 [update.modrinth]
 mod-id = "DFqQfIBR"
-version = "xfaJfAQA"
+version = "P4RgtiBc"
