--- a/mods/tweaks/performance/badoptimizations.pw.toml
+++ b/mods/tweaks/performance/badoptimizations.pw.toml
@@ -1,13 +1,13 @@
 name = "BadOptimizations"
-filename = "BadOptimizations-2.1.2-1.20.1.jar"
+filename = "BadOptimizations-2.1.3-1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/V222vBVT/BadOptimizations-2.1.2-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/g96Z4WVZ/versions/Yvu9MYgX/BadOptimizations-2.1.3-1.20.1.jar"
 hash-format = "sha1"
-hash = "f6cd7b5ca2589634b3f370d2dd12721e09fdb6b7"
+hash = "6a65552b8bec7eebb3ee93e8f327644b3b81b2c6"
 
 [update]
 [update.modrinth]
 mod-id = "g96Z4WVZ"
-version = "V222vBVT"
+version = "Yvu9MYgX"
