--- a/mods/content/decoration/beautify-refabricated.pw.toml
+++ b/mods/content/decoration/beautify-refabricated.pw.toml
@@ -1,13 +1,13 @@
 name = "Beautify: Refabricated"
-filename = "beautify-1.1.0+fabric-1.20.jar"
+filename = "beautify-1.2.0+1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/DhSSvaxs/versions/L8UoMrNs/beautify-1.1.0%2Bfabric-1.20.jar"
+url = "https://cdn.modrinth.com/data/DhSSvaxs/versions/6tIaagwA/beautify-1.2.0%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "8c8e55578054ccd05df37a3727b37050052f4b5a"
+hash = "8d30bf06e8f8b7a384156a8cc145b629f4a99ea6"
 
 [update]
 [update.modrinth]
 mod-id = "DhSSvaxs"
-version = "L8UoMrNs"
+version = "6tIaagwA"
