--- a/index.toml
+++ b/index.toml
@@ -563,6 +563,14 @@ file = "mods/content/supplementaries/supplementaries.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/dawn.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/kambrik.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/architectury-api.pw.toml"
 metafile = true
 
