missing server lib

--- a/index.toml
+++ b/index.toml
@@ -655,6 +655,10 @@ file = "mods/libraries/konkrete.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/library-ferret-fabric.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/mariadb-jdbc.pw.toml"
 metafile = true
 
