testing out tectonic

--- a/index.toml
+++ b/index.toml
@@ -1335,6 +1335,10 @@ file = "mods/worldgen/nullscape.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/worldgen/tectonic.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/worldgen/yungs/yungs-better-desert-temples.pw.toml"
 metafile = true
 
