--- a/index.toml
+++ b/index.toml
@@ -63,6 +63,10 @@ file = "config/paxi/datapacks/better-villages-more-villagers-compatibility.pw.to
 metafile = true
 
 [[files]]
+file = "config/paxi/datapacks/nsmpgen.pw.toml"
+metafile = true
+
+[[files]]
 file = "config/paxi/resourcepacks/advancement-plaques-with-vines.pw.toml"
 metafile = true
 
