--- a/mods/worldgen/nsmp-worldgen.pw.toml
+++ b/mods/worldgen/nsmp-worldgen.pw.toml
@@ -1,5 +1,6 @@
 name = "nsmp-worldgen"
 filename = "NSMP Worldgen-0.0.4+1.20.1-server.jar"
+side = "both"
 
 [download]
 url = "https://raw.githubusercontent.com/nekosmp/nsmp-artifacts/main/NSMP%20Worldgen-0.0.4%2B1.20.1-server.jar"
