--- a/index.toml
+++ b/index.toml
@@ -662,6 +662,10 @@ file = "mods/libraries/library-ferret-fabric.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/malilib.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/mariadb-jdbc.pw.toml"
 metafile = true
 
