--- a/index.toml
+++ b/index.toml
@@ -758,6 +758,10 @@ file = "mods/libraries/yungs-api.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/nsmp-worldgen.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/audio/dynamicsurroundingsfabric.pw.toml"
 metafile = true
 
