--- a/mods/utils/bluemap/bluemap.pw.toml
+++ b/mods/utils/bluemap/bluemap.pw.toml
@@ -1,13 +1,13 @@
 name = "BlueMap"
-filename = "BlueMap-3.21-fabric-1.20.jar"
+filename = "BlueMap-5.2-fabric-1.20.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/swbUV1cr/versions/KJdesrDu/BlueMap-3.21-fabric-1.20.jar"
+url = "https://cdn.modrinth.com/data/swbUV1cr/versions/Pdj9VJT2/BlueMap-5.2-fabric-1.20.jar"
 hash-format = "sha1"
-hash = "f943561d7d689d0ccdcae91d2302123f4c7212b9"
+hash = "f12e304443d982439010908399b1e36baa8d39fd"
 
 [update]
 [update.modrinth]
 mod-id = "swbUV1cr"
-version = "KJdesrDu"
+version = "Pdj9VJT2"
