--- a/mods/content/create/copycats.pw.toml
+++ b/mods/content/create/copycats.pw.toml
@@ -1,13 +1,13 @@
 name = "Create: Copycats+"
-filename = "Copycats-fabric.1.20.1-1.3.1.jar"
+filename = "Copycats-fabric.1.20.1-1.3.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/UT2M39wf/versions/6MEpzmfX/Copycats-fabric.1.20.1-1.3.1.jar"
+url = "https://cdn.modrinth.com/data/UT2M39wf/versions/FiaB6nOi/Copycats-fabric.1.20.1-1.3.4.jar"
 hash-format = "sha1"
-hash = "563546c3cc67f248d08776aa38073234cc9a8396"
+hash = "1a87338d51927738b1652dad9daae70bf30f73f5"
 
 [update]
 [update.modrinth]
 mod-id = "UT2M39wf"
-version = "6MEpzmfX"
+version = "FiaB6nOi"
