--- a/index.toml
+++ b/index.toml
@@ -701,6 +701,10 @@ file = "mods/libraries/lavender.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/library-ferret-fabric.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/malilib.pw.toml"
 metafile = true
 
