--- a/mods/tweaks/visual/fabricbettergrass.pw.toml
+++ b/mods/tweaks/visual/fabricbettergrass.pw.toml
@@ -1,13 +1,13 @@
 name = "FabricBetterGrass"
-filename = "FabricBetterGrass-1.0.13+1.20.6.jar"
+filename = "FabricBetterGrass-1.0.14+1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/f5H8dOpa/FabricBetterGrass-1.0.13%2B1.20.6.jar"
+url = "https://cdn.modrinth.com/data/m5T5xmUy/versions/eVK5lVI1/FabricBetterGrass-1.0.14%2B1.20.1.jar"
 hash-format = "sha1"
-hash = "799a71e39e09e00d413a2cd2bceb3adfe3e36dc7"
+hash = "37cc8ad84330c82dc4f0883de8c6df3323e7dc23"
 
 [update]
 [update.modrinth]
 mod-id = "m5T5xmUy"
-version = "f5H8dOpa"
+version = "eVK5lVI1"
