--- a/index.toml
+++ b/index.toml
@@ -66,10 +66,6 @@ file = "config/paxi/datapacks/better-villages-more-villagers-compatibility.pw.to
 metafile = true
 
 [[files]]
-file = "config/paxi/datapacks/treeplacer-wythers-addon.pw.toml"
-metafile = true
-
-[[files]]
 file = "config/paxi/resourcepacks/advancement-plaques-with-vines.pw.toml"
 metafile = true
 
@@ -81,7 +77,19 @@ metafile = true
 file = "config/tectonic.json"
 
 [[files]]
+file = "gwaaa/create-aquatic-ambitions.pw.toml"
+metafile = true
+
+[[files]]
+file = "gwaaa/create-cards.pw.toml"
+metafile = true
+
+[[files]]
 file = "gwaaa/emi-loot.pw.toml"
+metafile = true
+
+[[files]]
+file = "gwaaa/treeplacer-wythers-addon.pw.toml"
 metafile = true
 
 [[files]]
@@ -165,15 +173,7 @@ file = "mods/content/create/copycats.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/content/create/create-aquatic-ambitions.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/content/create/create-big-cannons.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/content/create/create-cards.pw.toml"
 metafile = true
 
 [[files]]
