--- a/mods/content/supplementaries/amendments.pw.toml
+++ b/mods/content/supplementaries/amendments.pw.toml
@@ -1,13 +1,13 @@
 name = "Amendments"
-filename = "amendments-1.20-1.2.4-fabric.jar"
+filename = "amendments-1.20-1.2.5-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/6iTJugQR/versions/y8OZApVk/amendments-1.20-1.2.4-fabric.jar"
+url = "https://cdn.modrinth.com/data/6iTJugQR/versions/5z6ELx20/amendments-1.20-1.2.5-fabric.jar"
 hash-format = "sha1"
-hash = "8a98f8ef69e538c20d6fb02cc015a43435f3edb8"
+hash = "6f6ae020c21d19099175667a07ea074c59b46962"
 
 [update]
 [update.modrinth]
 mod-id = "6iTJugQR"
-version = "y8OZApVk"
+version = "5z6ELx20"
